--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
             <a class="btn" href="highscores.html">High Scores</a>
             <a class="btn" href="category.html">Categories</a>
             <a class="btn" href="index.html">Home</a>
+            <button class="btn">
+                <p class="words">Hover me</p>
+            </button> <!-- Hier eingefügt -->
         </div>
     </div>
-</div>
 </div>
 <script src="js/app.js"></script>
 </body>
 </html>
-<button class="btn">
-    <p class="words">Hover me</p>
-</button>
