--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 <div class="container">
-    <div class="start-box"> <!-- Box hinzugefügt -->
+    <div class="start-box">
         <div id="home" class="flex-center flex-column">
             <h1>Prüfungsvorbereitung</h1>
-            <a class="btn" href="GAME.html">Play</a>
+            <a class="btn" href="game.html">Play</a>
             <a class="btn" href="highscores.html">High Scores</a>
             <a class="btn" href="category.html">Categories</a>
             <a class="btn" href="index.html">Home</a>
             <button class="btn">
                 <p class="words">Hover me</p>
-            </button> <!-- Hier eingefügt -->
+            </button>
         </div>
     </div>
 </div>
