--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="start-box">
         <div id="home" class="flex-center flex-column">
             <h1>Prüfungsvorbereitung</h1>
-            <a class="btn" href="game.html">Play</a>
+            <a class="btn" href="GAME.html">Play</a>
             <a class="btn" href="highscores.html">High Scores</a>
             <a class="btn" href="category.html">Categories</a>
             <a class="btn" href="index.html">Home</a>
