--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Prüfungsvorbereitung</h1>
             <a class="btn" href="GAME.html">Play</a>
             <a class="btn" href="highscores.html">High Scores</a>
-            <a class="btn" href="category.html">Categories</a>
+            <a class="btn" href="Category.html">Categories</a>
             <a class="btn" href="index.html">Home</a>
             <button class="btn">
                 <p class="words">Hover me</p>
