--- a/Category.html
+++ b/Category.html
@@ -2,10 +2,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kategorien</title>
-  <link rel="stylesheet" href="category.css"> <!-- Verlinkung zur CSS-Datei -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Seitenname</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
