--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startseite</title>
-    <link rel="stylesheet" href="AppStyle.css"> <!-- Verlinkung zur CSS-Datei -->
+    <title>Seitenname</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
