--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Seitenname</title>
-    <link rel="stylesheet" href="AppStyle.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Startseite</title>
+  <link rel="stylesheet" href="AppStyle.css"> <!-- Verlinkung zur CSS-Datei -->
 </head>
 <body>
 <div class="container">
-    <div class="start-box">
-        <div id="home" class="flex-center flex-column">
-            <h1>Prüfungsvorbereitung</h1>
-            <a class="btn" href="GAME.html">Play</a>
-            <a class="btn" href="highscores.html">High Scores</a>
-            <a class="btn" href="Category.html">Categories</a>
-            <button class="btn">
-                <p class="words">Hover me</p>
-            </button>
-        </div>
+  <div class="start-box"> <!-- Box hinzugefügt -->
+    <div id="home" class="flex-center flex-column">
+      <h1>Prüfungsvorbereitung</h1>
+      <a class="btn" href="GAME.html">Play</a>
+      <a class="btn" href="highscores.html">High Scores</a>
+      <a class="btn" href="Category.html">Categories</a>
+      <a class="btn" href="index.html">Home</a>
     </div>
+  </div>
 </div>
 <script src="js/app.js"></script>
 </body>
 </html>
+<button class="btn">
+  <p class="words">Hover me</p>
+</button>
+
