--- a/Category.html
+++ b/Category.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seitenname</title>
-    <link rel="stylesheet" href="AppStyle.css">
+    <link rel="stylesheet" href="category.css">
 </head>
 <body>
 <div class="container">
