--- a/Category.html
+++ b/Category.html
@@ -2,10 +2,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Seitenname</title>
-    <link rel="stylesheet" href="category.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kategorien</title>
+  <link rel="stylesheet" href="category.css"> <!-- Verlinkung zur CSS-Datei -->
 </head>
 <body>
 <div class="container">
@@ -41,7 +41,7 @@
     <div class="category" onclick="selectCategory('Parkinson-Syndrome und ihre Therapie')">
       Weitere SKL Fächer
     </div>
-    <a class="btn" href="index.html">Zurück zur Startseite</a> <!-- Zurück zur Startseite -->
+    <a class="btn" href="index.html">HOME</a> <!-- Zurück zur Startseite -->
   </div>
 </div>
 <script src="category.js"></script> <!-- Verlinkung zur JS-Datei -->
