--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Startseite</title>
   <link rel="stylesheet" href="AppStyle.css"> <!-- Verlinkung zur CSS-Datei -->
 </head>
@@ -14,11 +14,12 @@
       <a class="btn" href="GAME.html">Play</a>
       <a class="btn" href="highscores.html">High Scores</a>
       <a class="btn" href="Category.html">Categories</a>
-      <a class="btn" href="index.html">Home</a>
+      <a class="btn" href="feedback.html">Feedback</a>
     </div>
   </div>
 </div>
 <script src="js/app.js"></script>
 </body>
 </html>
+
 
