--- a/feedback.html
+++ b/feedback.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feedback</title>
-  <link rel="stylesheet" href="AppStyle.css"> <!-- Verwende die vorhandene CSS-Datei -->
-  <link rel="stylesheet" href="feedback.css"> <!-- Feedback-spezifische CSS-Datei -->
+  <link rel="stylesheet" href="AppStyle.css">
 </head>
 <body>
 <div class="container">
@@ -19,8 +18,7 @@
     <a class="btn" href="index.html">Zurück zur Startseite</a>
   </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
 <script src="feedback.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script> <!-- EmailJS Script -->
-
 </body>
 </html>
