--- a/feedback.html
+++ b/feedback.html
@@ -18,7 +18,9 @@
     <a class="btn" href="index.html">Zurück zur Startseite</a>
   </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
 <script src="feedback.js"></script>
 </body>
 </html>
