--- a/feedback.html
+++ b/feedback.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feedback</title>
   <link rel="stylesheet" href="AppStyle.css">
+  <link rel="stylesheet" href="feedback.css">
+
+  <!-- Neueste EmailJS SDK-Version -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -18,9 +22,6 @@
     <a class="btn" href="index.html">Zurück zur Startseite</a>
   </div>
 </div>
-<script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-</script>
-<script src="feedback.js"></script>
+<script src="feedback.js"></script> <!-- Deine JS-Datei -->
 </body>
 </html>
