--- a/feedback.html
+++ b/feedback.html
@@ -1,14 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feedback</title>
   <link rel="stylesheet" href="AppStyle.css">
   <link rel="stylesheet" href="feedback.css">
-
-  <!-- Neueste EmailJS SDK-Version -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -22,6 +19,7 @@
     <a class="btn" href="index.html">Zurück zur Startseite</a>
   </div>
 </div>
-<script src="feedback.js"></script> <!-- Deine JS-Datei -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+<script src="feedback.js"></script>
 </body>
 </html>
