--- a/Category.html
+++ b/Category.html
@@ -20,11 +20,11 @@
     <div class="category" onclick="selectCategory('Neurologie Teil 3')">
       Neurologie Teil 3
     </div>
-    <div class="category" onclick="selectCategory('Muskeltonusstörungen')">
-      Kardiologie
+    <div class="category" onclick="selectCategory('Orthopädie')">
+      Orthopädie
     </div>
     <div class="category" onclick="selectCategory('Bewusstseinsstörungen')">
-      Orthopädie
+      Kardiologie
     </div>
     <div class="category" onclick="selectCategory('Neuropsychologische Syndrome')">
       Chirugie
