--- a/Category.html
+++ b/Category.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kategorien</title>
-  <link rel="stylesheet" href="Category.css"> <!-- Verlinkung zur CSS-Datei -->
+  <link rel="stylesheet" href="category.css"> <!-- Verlinkung zur CSS-Datei -->
 </head>
 <body>
 <div class="container">
