--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
-<!doctype html>
-<html class="no-js" lang="en">
+<!DOCTYPE html>
+<html class="no-js" lang="de"> <!-- Sprache auf Deutsch -->
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Wichtig für Responsive Design -->
   <title>Startseite</title>
   <link rel="stylesheet" href="AppStyle.css"> <!-- Verlinkung zur CSS-Datei -->
 </head>
 <body>
-<div class="container">
-  <div class="start-box"> <!-- Box hinzugefügt -->
-    <div id="home" class="flex-center flex-column">
-      <h1>Prüfungsvorbereitung</h1>
-      <a class="btn" href="GAME.html">Play</a>
-      <a class="btn" href="highscores.html">High Scores</a>
-      <a class="btn" href="Category.html">Categories</a>
-      <a class="btn" href="feedback.html">Feedback</a>
+  <div class="container">
+    <div class="start-box"> <!-- Box für den Startinhalt -->
+      <div id="home" class="flex-center flex-column">
+        <h1>Prüfungsvorbereitung</h1>
+        <a class="btn" href="GAME.html">Play</a> <!-- Link zur Spiel-Seite -->
+        <a class="btn" href="highscores.html">High Scores</a> <!-- Link zu High Scores -->
+        <a class="btn" href="Category.html">Categories</a> <!-- Link zu Kategorien -->
+        <a class="btn" href="feedback.html">Feedback</a> <!-- Link zu Feedback -->
+      </div>
     </div>
   </div>
-</div>
-<script src="js/app.js"></script>
+
+  <script src="js/app.js"></script> <!-- Verlinkung zur JavaScript-Datei -->
 </body>
 </html>
-
-
