--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             Denke daran: Jeder kleine Fortschritt zählt! Bleib motiviert und gib nicht auf.
         </p>
         <p>
-            Bitte gib uns Feedback, damit wir die Plattform weiter verbessern können. Aktuell konzentrieren sich 
+            Gib mir gerne Feedback über den Feedback-Button, damit ich die Plattform weiter verbessern kann. Aktuell konzentrieren sich 
             die Inhalte auf die medizinischen Fächer der Ergotherapie-Ausbildung.
         </p>
         <p>Viel Erfolg und alles Gute auf deinem Weg zum Examen!</p>
