--- a/podcast.html
+++ b/podcast.html
@@ -24,7 +24,7 @@
     <div class="podcast-item">
       <h2>Neurologie Examensvorbereitung</h2>
       <audio controls>
-        <source src="audio/folge2.mp3" type="audio/mpeg">
+        <source src="https://github.com/DrNighteye/lerndeinexamen/raw/refs/heads/main/Neurologie%20-%20Podcast%20mp3%20komprimiert.mp3" type="audio/mpeg">
         Dein Browser unterstützt kein Audio-Element.
       </audio>
     </div>
