--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Navigation bar -->
 <header class="header">
     <!-- Logo -->
-    <a href="#" class="logo">Exman</a>
+    <a href="#" class="logo">Examen</a>
     <!-- Hamburger icon -->
     <input class="side-menu" type="checkbox" id="side-menu"/>
     <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
