--- a/Category.html
+++ b/Category.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="category.css"> <!-- Verlinkung zur CSS-Datei -->
 </head>
 <body>
+  <!-- Navigation bar -->
+<header class="header">
+    <!-- Logo -->
+    <a href="#" class="logo">Examen</a>
+    <!-- Hamburger icon -->
+    <input class="side-menu" type="checkbox" id="side-menu"/>
+    <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+    <!-- Menu -->
+    <nav class="nav">
+        <ul class="menu">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="Category.html">Category</a> </li>
+            <li><a href="podcast.html">PODCAST</a></li>
+            <li><a href="feedback.html">FEEDBACK</a></li>
+        </ul>
+    </nav>
+</header>
 <div class="container">
   <div class="category-container">
     <h2>Wähle eine Kategorie</h2>
