--- a/GAME.html
+++ b/GAME.html
@@ -8,8 +8,26 @@
   <!-- CSS-Dateien -->
   <link rel="stylesheet" href="AppStyle.css">
   <link rel="stylesheet" href="game.css">
+  <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
+  <!-- Navigation bar -->
+<header class="header">
+    <!-- Logo -->
+    <a href="#" class="logo">Examen</a>
+    <!-- Hamburger icon -->
+    <input class="side-menu" type="checkbox" id="side-menu"/>
+    <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+    <!-- Menu -->
+    <nav class="nav">
+        <ul class="menu">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="Category.html">Category</a> </li>
+            <li><a href="podcast.html">PODCAST</a></li>
+            <li><a href="feedback.html">FEEDBACK</a></li>
+        </ul>
+    </nav>
+</header>
 <div class="container">
   <div id="game" class="justify-center flex-column">
 
