--- a/end.html
+++ b/end.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super gemacht!</title>
     <link rel="stylesheet" href="AppStyle.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
+    <!-- Navigation bar -->
+<header class="header">
+    <!-- Logo -->
+    <a href="#" class="logo">Exman</a>
+    <!-- Hamburger icon -->
+    <input class="side-menu" type="checkbox" id="side-menu"/>
+    <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+    <!-- Menu -->
+    <nav class="nav">
+        <ul class="menu">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="Category.html">Category</a> </li>
+            <li><a href="podcast.html">PODCAST</a></li>
+            <li><a href="feedback.html">FEEDBACK</a></li>
+        </ul>
+    </nav>
+</header>
+    
 <div class="container">
     <div id="end" class="flex-center flex-column">
         <h1 id="finalScore">Dein Score: <span id="scoreValue"></span></h1> <!-- Zeige den Score an -->
