--- a/podcast.html
+++ b/podcast.html
@@ -5,8 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Examenpodcasts</title>
   <link rel="stylesheet" href="podcast.css">
+  <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
+  <!-- Navigation bar -->
+<header class="header">
+    <!-- Logo -->
+    <a href="#" class="logo">Exman</a>
+    <!-- Hamburger icon -->
+    <input class="side-menu" type="checkbox" id="side-menu"/>
+    <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+    <!-- Menu -->
+    <nav class="nav">
+        <ul class="menu">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="Category.html">Category</a> </li>
+            <li><a href="podcast.html">PODCAST</a></li>
+            <li><a href="feedback.html">FEEDBACK</a></li>
+        </ul>
+    </nav>
+</header>
 
 <div class="container">
   <h1>Meine Podcasts</h1>
