--- a/Category.html
+++ b/Category.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kategorien</title>
   <link rel="stylesheet" href="category.css"> <!-- Verlinkung zur CSS-Datei -->
+  <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
   <!-- Navigation bar -->
