--- a/Category.html
+++ b/Category.html
@@ -2,14 +2,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kategorien</title>
-  <link rel="stylesheet" href="category.css"> <!-- Verlinkung zur CSS-Datei -->
-  <link rel="stylesheet" href="navbar.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kategorien</title>
+    <link rel="stylesheet" href="category.css"> <!-- Verlinkung zur CSS-Datei -->
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-  <!-- Navigation bar -->
+<!-- Navigation bar -->
 <header class="header">
     <!-- Logo -->
     <a href="#" class="logo">Examen</a>
@@ -27,40 +27,40 @@
     </nav>
 </header>
 <div class="container">
-  <div class="category-container">
-    <h2>Wähle eine Kategorie</h2>
-    <div class="category" onclick="selectCategory('Neurologie Teil 1')">
-      Neurologie Teil 1
+    <div class="category-container">
+        <h2>Wähle eine Kategorie</h2>
+        <div class="category" onclick="selectCategory('Neurologie Teil 1')">
+            Neurologie Teil 1
+        </div>
+        <div class="category" onclick="selectCategory('Neurologie Teil 2')">
+            Neurologie Teil 2
+        </div>
+        <div class="category" onclick="selectCategory('Neurologie Teil 3')">
+            Neurologie Teil 3
+        </div>
+        <div class="category" onclick="selectCategory('Orthopädie')">
+            Orthopädie
+        </div>
+        <div class="category" onclick="selectCategory('Chirugie')">
+            Chirugie
+        </div>
+        <div class="category" onclick="selectCategory('Neuropsychologische Syndrome')">
+            kardiologie
+        </div>
+        <div class="category" onclick="selectCategory('Sensibilitätsstörungen')">
+            Geriatrie
+        </div>
+        <div class="category" onclick="selectCategory('Parkinson-Syndrome und ihre Therapie')">
+            Psychatrie
+        </div>
+        <div class="category" onclick="selectCategory('Parkinson-Syndrome und ihre Therapie')">
+            Pädiatrie
+        </div>
+        <div class="category" onclick="selectCategory('Parkinson-Syndrome und ihre Therapie')">
+            Weitere SKL Fächer
+        </div>
+        <a class="btn" href="index.html">HOME</a> <!-- Zurück zur Startseite -->
     </div>
-    <div class="category" onclick="selectCategory('Neurologie Teil 2')">
-      Neurologie Teil 2
-    </div>
-    <div class="category" onclick="selectCategory('Neurologie Teil 3')">
-      Neurologie Teil 3
-    </div>
-    <div class="category" onclick="selectCategory('Orthopädie')">
-      Orthopädie
-    </div>
-    <div class="category" onclick="selectCategory('Bewusstseinsstörungen')">
-      Kardiologie
-    </div>
-    <div class="category" onclick="selectCategory('Neuropsychologische Syndrome')">
-      Chirugie
-    </div>
-    <div class="category" onclick="selectCategory('Sensibilitätsstörungen')">
-      Geriatrie
-    </div>
-    <div class="category" onclick="selectCategory('Parkinson-Syndrome und ihre Therapie')">
-      Psychatrie
-    </div>
-    <div class="category" onclick="selectCategory('Parkinson-Syndrome und ihre Therapie')">
-      Pädiatrie
-    </div>
-    <div class="category" onclick="selectCategory('Parkinson-Syndrome und ihre Therapie')">
-      Weitere SKL Fächer
-    </div>
-    <a class="btn" href="index.html">HOME</a> <!-- Zurück zur Startseite -->
-  </div>
 </div>
 <script src="category.js"></script> <!-- Verlinkung zur JS-Datei -->
 </body>
