--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li><a href="Category.html">Category</a> </li>
             <li><a href="podcast.html">PODCAST</a></li>
             <li><a href="feedback.html">FEEDBACK</a></li>
+            <li><a href="login.html">LOGIN</a></li>
+            <li><a href="register.html">REGISTER</a></li>
         </ul>
     </nav>
 </header>
@@ -35,6 +37,8 @@
       <a class="btn" href="Category.html">Categories</a>
       <a class="btn" href="podcast.html">Podcasts</a>
       <a class="btn" href="feedback.html">Feedback</a>
+        <a class="btn" href="login.html">LOGIN</a>
+        <a class="btn" href="register.html">REGISTIEREN</a>
     </div>
   </div>
 </div>
