--- a/register.html
+++ b/register.html
@@ -5,31 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="register.css">
     <title>Registrierungsseite</title>
-    <link rel="stylesheet" href="register.css">
 </head>
 <body>
 
-<div class="register-container"> <!-- Container für das Registrierungsformular -->
-    <h1>Registrieren</h1> <!-- Überschrift -->
-    <form id="registerForm"> <!-- Formular für die Registrierung -->
-        <div class="input-group"> <!-- Gruppe für Eingabefelder -->
-            <label for="username">Benutzername:</label> <!-- Beschriftung für das Benutzereingabefeld -->
-            <input type="text" id="username" required> <!-- Eingabefeld für den Benutzernamen, erforderlich -->
+<div class="register-container">
+    <h1>Registrieren</h1>
+    <form id="registerForm"> <!-- Funktion registerUser bei Formularabsendung ausführen -->
+        <div class="input-group">
+            <label for="email">E-Mail:</label>
+            <input type="email" id="email" required>
         </div>
-        <div class="input-group"> <!-- Gruppe für das Passwortfeld -->
-            <label for="password">Passwort:</label> <!-- Beschriftung für das Passwortfeld -->
-            <input type="password" id="password" required> <!-- Eingabefeld für das Passwort, erforderlich -->
+        <div class="input-group">
+            <label for="password">Passwort:</label>
+            <input type="password" id="password" required>
         </div>
-        <div class="input-group"> <!-- Gruppe für das Bestätigungs-Passwortfeld -->
-            <label for="confirmPassword">Passwort bestätigen:</label> <!-- Beschriftung für das Bestätigungs-Passwortfeld -->
-            <input type="password" id="confirmPassword" required> <!-- Eingabefeld für die Bestätigung des Passworts, erforderlich -->
+        <div class="input-group">
+            <label for="confirmPassword">Passwort bestätigen:</label>
+            <input type="password" id="confirmPassword" required>
         </div>
-        <button type="submit">Registrieren</button> <!-- Registrierungs-Button -->
-        <button type="button" onclick="window.location.href='login.html'">Zurück zum Login</button> <!-- Rückkehr-Button zum Login -->
+        <button type="submit">Registrieren</button>
+        <button type="button" onclick="window.location.href='login.html'">Zurück zum Login</button>
         <button type="button" onclick="window.location.href='index.html' ">HOME</button>
     </form>
     <p id="message"></p> <!-- Platz für Fehlermeldungen oder Erfolgsmeldungen -->
 </div>
-<script src="register.js"></script> <!-- Verknüpfung zur JavaScript-Datei -->
+
+<script type="module">
+    import { registerUser } from './firebase.js';
+
+    document.getElementById('registerForm').addEventListener('submit', (event) => {
+        event.preventDefault();
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
+
+        if (password !== confirmPassword) {
+            document.getElementById('message').innerText = 'Passwörter stimmen nicht überein!';
+            return;
+        }
+
+        registerUser(email, password)
+            .then(() => {
+                document.getElementById('message').innerText = 'Erfolgreich registriert!';
+                window.location.href="login.html";
+            })
+            .catch((error) => {
+                document.getElementById('message').innerText = 'Fehler: ' + error.message;
+            });
+    });
+</script>
 </body>
 </html>
