--- a/GAME.html
+++ b/GAME.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prüfungsvorbereitung - Spiel</title>
+  <title>Prüfungsvorbereitung</title>
 
   <!-- CSS-Dateien -->
   <link rel="stylesheet" href="AppStyle.css">
