--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div id="home" class="flex-center flex-column">
       <h1>Prüfungsvorbereitung</h1>
       <a class="btn" href="GAME.html">Play</a>
+        <a class="btn" href="gamemode.html">Gamemode</a>
       <a class="btn" href="highscores.html">High Scores</a>
       <a class="btn" href="Category.html">Categories</a>
       <a class="btn" href="podcast.html">Podcasts</a>
