Test css and html for design concept

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="AppStyle.css">
   <link rel="stylesheet" href="popup.css"><!-- Popup CSS hinzufügen -->
   <link rel="stylesheet" href="navbar.css">
+    <link rel="icon" href="ExaGo.png">
 </head>
 <body>
   <!-- Navigation bar -->
 <header class="header">
     <!-- Logo -->
-    <a href="#" class="logo">Examen</a>
+    <a href="ExaGo.png" class="logo">Examen</a>
     <!-- Hamburger icon -->
     <input class="side-menu" type="checkbox" id="side-menu"/>
     <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
