--- a/test/start.html
+++ b/test/start.html
@@ -15,9 +15,9 @@
         <div class="menu">
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">Kategorien</a></li>
-                <li><a href="#">Feedback</a></li>
-                <li><a href="#">Podcast</a></li>
+                <li><a href="Category.html">Kategorien</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+                <li><a href="podcast.html">Podcast</a></li>
             </ul>
         </div>
 
@@ -29,9 +29,9 @@
     </div>
     <div class="content">
         <h1><br><span>ExaGo</span> <br>Vorbereitung beginnt hier</h1>
-        <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque
-            expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus
-            <br> a quae totam ipsa illum minus laudantium?</p>
+        <p class="par">Dein Erfolg beginnt mit der richtigen Vorbereitung. Ich helfe dir, dich optimal auf das
+        Examen <br>vorzubereiten und das strukturiert, effizient und simpel.</br> Setze auf ExaGo und starte durch mit
+        Wissen, was dich wirklich weiterbringt.</p>
 
         <button class="cn"><a href="#">JOIN US</a></button>
 
@@ -41,9 +41,9 @@
             <input type="password" name="" placeholder="Enter Password Here">
             <button class="btnn"><a href="#">Login</a></button>
 
-            <p class="link">Don't have an account<br>
-                <a href="#">Sign up </a> here</a></p>
-            <p class="liw">Log in with</p>
+            <p class="link">Noch keinen Account?<br>
+                <a href="#">Registiere dich </a> hier</a></p>
+            <p class="liw">Jetzt einloggen mit</p>
 
             <div class="icons">
                 <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
@@ -52,6 +52,8 @@
                 <a href="#"><ion-icon name="logo-google"></ion-icon></a>
                 <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
             </div>
+        </div>
+
 
         </div>
     </div>
