Adjustment - backend logic for gamemodes, indrucing new gamemodes, color changes. adjustments in game: flex display better fit for mobile devices
adding facts section on the Start page

--- a/Category.html
+++ b/Category.html
@@ -12,7 +12,7 @@
 <!-- Navigation bar -->
 <header class="header">
     <!-- Logo -->
-    <a href="#" class="logo">Examen</a>
+    <a href="index.html" class="logo">ExaGo</a>
     <!-- Hamburger icon -->
     <input class="side-menu" type="checkbox" id="side-menu"/>
     <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
@@ -44,8 +44,8 @@
         <div class="category" onclick="selectCategory('Chirugie')">
             Chirugie
         </div>
-        <div class="category" onclick="selectCategory('Neuropsychologische Syndrome')">
-            kardiologie
+        <div class="category" onclick="selectCategory('Kardiologie')">
+            Kardiologie
         </div>
         <div class="category" onclick="selectCategory('Sensibilitätsstörungen')">
             Geriatrie
