--- a/gamemode.html
+++ b/gamemode.html
@@ -6,10 +6,29 @@
 
     <!-- CSS-Dateien -->
     <link rel="stylesheet" href="AppStyle.css">
+    <link rel="stylesheet" href="navbar.css">
 
     <title>Gamemode Auswahl</title>
 </head>
 <body>
+<header class="header">
+    <!-- Logo -->
+    <a href="index.html" class="logo">ExaGo</a>
+    <!-- Hamburger icon -->
+    <input class="side-menu" type="checkbox" id="side-menu"/>
+    <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+    <!-- Menu -->
+    <nav class="nav">
+        <ul class="menu">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="Category.html">Category</a> </li>
+            <li><a href="podcast.html">PODCAST</a></li>
+            <li><a href="feedback.html">FEEDBACK</a></li>
+            <!-- <li><a href="login.html">LOGIN</a></li>-->
+            <!--<li><a href="register.html">REGISTER</a></li>-->
+        </ul>
+    </nav>
+</header>
 <div class="container">
     <div class="start-box">
         <div id="home" class="flex-center flex-column">
@@ -25,6 +44,7 @@
         </div>
     </div>
 </div>
+
 
 <script>
     // Funktion, um den Spielmodus in localStorage zu speichern
