--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startseite</title>
+    <title>Dein Examen</title>
     <link rel="stylesheet" href="AppStyle.css">
     <link rel="stylesheet" href="popup.css"><!-- Popup CSS hinzufügen -->
     <link rel="stylesheet" href="navbar.css">
-    <link rel="icon" href="ExaGo.png">
+    <link rel="icon" href="ExaGoLogo.png">
     <style>
         /* Body Flexbox */
         body {
@@ -57,9 +57,10 @@
 </head>
 <body>
 <!-- Navigation bar -->
-<header class="header">
+
     <!-- Logo -->
-    <a href="ExaGo.png" class="logo">Examen</a>
+<header class="header">
+    <a href="index.html" class="logo">ExaGo</a>
     <!-- Hamburger icon -->
     <input class="side-menu" type="checkbox" id="side-menu"/>
     <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
@@ -67,14 +68,13 @@
     <nav class="nav">
         <ul class="menu">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="Category.html">Category</a> </li>
+            <li><a href="Category.html">Category</a></li>
             <li><a href="podcast.html">PODCAST</a></li>
             <li><a href="feedback.html">FEEDBACK</a></li>
-           <!-- <li><a href="login.html">LOGIN</a></li>-->
-            <!--<li><a href="register.html">REGISTER</a></li>-->
         </ul>
     </nav>
 </header>
+
 
 <div class="box-container" id="factContainer">
     <!-- Boxen werden hier dynamisch hinzugefügt -->
